minor changes in sign_up java file by millindar

--- a/app/src/main/res/layout/activity_details_of_ride.xml
+++ b/app/src/main/res/layout/activity_details_of_ride.xml
@@ -7,7 +7,7 @@
     tools:context=".Details_of_ride">
 
     <TextView
-        android:id="@+id/Name"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/ContactNUM"
+        android:id="@+id/contactNUM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -26,10 +26,10 @@
         android:text="9848782266"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Name" />
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <TextView
-        android:id="@+id/Email"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -37,10 +37,10 @@
         android:text="nishanthreddy@gmail.com"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ContactNUM" />
+        app:layout_constraintTop_toBottomOf="@+id/contactNUM" />
 
     <TextView
-        android:id="@+id/Location"
+        android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -48,7 +48,7 @@
         android:text="1115 N dr,Horizonwest apt,maryville,MO"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Email" />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <Button
         android:id="@+id/locationBTN"
@@ -58,7 +58,7 @@
         android:layout_marginTop="26dp"
         android:text="location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Location" />
+        app:layout_constraintTop_toBottomOf="@+id/location" />
 
     <TextView
         android:id="@+id/headerTV"
@@ -82,5 +82,5 @@
         android:onClick="close_fun"
         android:text="Close"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Location" />
+        app:layout_constraintTop_toBottomOf="@+id/location" />
 </androidx.constraintlayout.widget.ConstraintLayout>
