--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Log_inBTN"
+        android:id="@+id/log_inBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pwdET" />
 
     <Button
-        android:id="@+id/SignupBTN"
+        android:id="@+id/signupBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
@@ -96,6 +96,6 @@
         android:text="Don't have an account?"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Log_inBTN" />
+        app:layout_constraintTop_toBottomOf="@+id/log_inBTN" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
