--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -139,7 +139,7 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordET" />
 
     <TextView
-        android:id="@+id/SignupText"
+        android:id="@+id/signupText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="175dp"
