--- a/app/src/main/res/layout/activity_post__a__ride.xml
+++ b/app/src/main/res/layout/activity_post__a__ride.xml
@@ -21,8 +21,8 @@
         android:id="@+id/startingEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="82dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="80dp"
         android:ems="10"
         android:hint="Starting Point"
         android:inputType="textPersonName"
@@ -44,7 +44,7 @@
         android:id="@+id/destinationEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
+        android:layout_marginStart="84dp"
         android:layout_marginTop="19dp"
         android:layout_marginBottom="540dp"
         android:ems="10"
@@ -52,12 +52,13 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/toText"
-        app:layout_constraintTop_toBottomOf="@+id/startingEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/startingEdit"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/seatsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="74dp"
+        android:layout_height="45dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="46dp"
         android:layout_marginBottom="486dp"
@@ -71,7 +72,7 @@
         android:id="@+id/seatsEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="19dp"
         android:layout_marginBottom="476dp"
         android:ems="10"
@@ -79,7 +80,8 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/seatsText"
-        app:layout_constraintTop_toBottomOf="@+id/destinationEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/destinationEdit"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/dateText"
@@ -99,7 +101,7 @@
         android:id="@+id/dateEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
+        android:layout_marginStart="68dp"
         android:layout_marginTop="44dp"
         android:layout_marginBottom="387dp"
         android:ems="10"
@@ -108,7 +110,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dateText"
         app:layout_constraintTop_toBottomOf="@+id/seatsEdit"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/costText"
@@ -127,7 +129,7 @@
         android:id="@+id/costEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
+        android:layout_marginStart="68dp"
         android:ems="10"
         android:hint="Name your price"
         android:inputType="textPersonName"
@@ -166,8 +168,8 @@
         android:id="@+id/locationTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="48dp"
         android:text="Location"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +179,7 @@
         android:id="@+id/locationET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="40dp"
         android:ems="10"
         android:hint="Location"
         android:inputType="textPersonName"
