--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parent_layout_search"
     tools:context=".Search_result">
 
     <TextView
@@ -49,61 +50,61 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addTV" />
 
-    <TextView
-        android:id="@+id/nameTV1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="67dp"
-        android:text="Yeshwanth"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingTV" />
+<!--    <TextView-->
+<!--        android:id="@+id/nameTV1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="64dp"-->
+<!--        android:layout_marginTop="67dp"-->
+<!--        android:text="Yeshwanth"-->
+<!--        android:textSize="18sp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/ratingTV" />-->
 
-    <Button
-        android:id="@+id/selectBTN1"
-        android:layout_width="80dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="113dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="24dp"
-        android:onClick="details"
-        android:text="Select"
-        app:layout_constraintBottom_toTopOf="@+id/addressTV1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/nameTV1" />
+<!--    <Button-->
+<!--        android:id="@+id/selectBTN1"-->
+<!--        android:layout_width="80dp"-->
+<!--        android:layout_height="36dp"-->
+<!--        android:layout_marginStart="113dp"-->
+<!--        android:layout_marginEnd="67dp"-->
+<!--        android:layout_marginBottom="24dp"-->
+<!--        android:onClick="details"-->
+<!--        android:text="Select"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/addressTV1"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/nameTV1" />-->
 
-    <TextView
-        android:id="@+id/addressTV1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="24dp"
-        android:text="Maryvile -> Kansas     price: $25     10/22/19 6:00 PM"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameTV1" />
+<!--    <TextView-->
+<!--        android:id="@+id/addressTV1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="64dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:text="Maryvile -> Kansas     price: $25     10/22/19 6:00 PM"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/nameTV1" />-->
 
-    <TextView
-        android:id="@+id/ratingTV1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="24dp"
-        android:text="Rating ****"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addressTV1" />
+<!--    <TextView-->
+<!--        android:id="@+id/ratingTV1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="64dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:text="Rating ****"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/addressTV1" />-->
 
-    <TextView
-        android:id="@+id/headerTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="182dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="170dp"
-        android:text="Search Results"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <TextView-->
+<!--        android:id="@+id/headerTV"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="182dp"-->
+<!--        android:layout_marginTop="36dp"-->
+<!--        android:layout_marginEnd="170dp"-->
+<!--        android:text="Search Results"-->
+<!--        android:textSize="24sp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
