--- a/app/src/main/res/layout/activity_post__a__ride.xml
+++ b/app/src/main/res/layout/activity_post__a__ride.xml
@@ -1,191 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Post_A_Ride">
 
     <TextView
-        android:id="@+id/fromText"
-        android:layout_width="wrap_content"
+        android:id="@+id/postText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="91dp"
+        android:text="Post a ride"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/nameTV_post"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/nameET_Post"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Name "
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/fromText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="From"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/startingEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="80dp"
         android:ems="10"
         android:hint="Starting Point"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/fromText"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/toText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="41dp"
         android:text="To"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fromText" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/destinationEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginBottom="540dp"
         android:ems="10"
         android:hint="Destination Point"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/toText"
-        app:layout_constraintTop_toBottomOf="@+id/startingEdit"
-        app:layout_constraintVertical_bias="1.0" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/seatsText"
-        android:layout_width="74dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginBottom="486dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Seats Available"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toText" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/seatsEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginBottom="476dp"
         android:ems="10"
         android:hint="No of seats available"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/seatsText"
-        app:layout_constraintTop_toBottomOf="@+id/destinationEdit"
-        app:layout_constraintVertical_bias="1.0" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/dateText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="61dp"
-        android:layout_marginBottom="399dp"
         android:text="Date"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seatsText"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/dateEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginBottom="387dp"
         android:ems="10"
         android:hint="Date"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/dateText"
-        app:layout_constraintTop_toBottomOf="@+id/seatsEdit"
-        app:layout_constraintVertical_bias="1.0" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/costText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="112dp"
         android:text="Cost"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/costEdit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateText" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/costEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
         android:ems="10"
-        android:hint="Name your price"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/locationET"
-        app:layout_constraintStart_toEndOf="@+id/costText"
-        app:layout_constraintTop_toBottomOf="@+id/dateEdit" />
-
-    <Button
-        android:id="@+id/postBTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="143dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="154dp"
-        android:onClick="backToHome"
-        android:text="Post"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:hint="Enter  Price"
+        android:inputType="textPersonName" />
 
     <TextView
-        android:id="@+id/postText"
-        android:layout_width="wrap_content"
+        android:id="@+id/PhonenumTV"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="179dp"
-        android:text="Post a ride"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/locationTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="48dp"
-        android:text="Location"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/costText" />
+        android:text="Phone Number"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/locationET"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:ems="10"
-        android:hint="Location"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/postBTN"
-        app:layout_constraintStart_toEndOf="@+id/locationTV"
-        app:layout_constraintTop_toBottomOf="@+id/costEdit"
-        app:layout_constraintVertical_bias="0.49" />
+        android:hint="contact number"
+        android:inputType="textPersonName" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/postBTN"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        android:textSize="18sp" />
+
+</LinearLayout>
