--- a/app/src/main/res/layout/model_request.xml
+++ b/app/src/main/res/layout/model_request.xml
@@ -22,7 +22,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/nameTV"
+            android:id="@+id/name1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -57,7 +57,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/startTV"
+            android:id="@+id/name2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -78,7 +78,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/endTV"
+            android:id="@+id/name3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -99,7 +99,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/datesTV"
+            android:id="@+id/name4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -117,51 +117,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="10">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seats"
-            android:textAlignment="center">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/seatsTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start|left"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:text="Seats"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price"
-            android:textAlignment="center">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/priceTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start|left"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:text="Price"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+        android:weightSum="10"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -186,7 +142,7 @@
         </TextView>
 
         <TextView
-            android:id="@+id/addressTV"
+            android:id="@+id/name5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
