--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
         android:layout_marginTop="57dp"
-        android:onClick="login_Fun"
         android:text="Log in"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pwdET" />
@@ -99,5 +98,17 @@
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/log_inBTN" />
+
+    <Button
+        android:id="@+id/forgotpass_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="54dp"
+        android:onClick="Forgot_function"
+        android:text="Forgot Password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/log_inBTN"
+        app:layout_constraintTop_toBottomOf="@+id/pwdET" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
