--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -85,7 +85,7 @@
         android:layout_width="0dp"
         android:layout_height="61dp"
         android:onClick="Myrides_function"
-        android:text="My Rides"
+        android:text="Profile"
         app:layout_constraintBottom_toTopOf="@+id/availBTN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
