minor changes in Post a ride and Request a ride files by millindar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,10 +104,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="56dp"
         android:onClick="Forgot_function"
         android:text="Forgot Password"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/log_inBTN"
         app:layout_constraintTop_toBottomOf="@+id/pwdET" />
 
