--- a/app/src/main/res/layout/activity_request__a__ride.xml
+++ b/app/src/main/res/layout/activity_request__a__ride.xml
@@ -90,5 +90,6 @@
         android:id="@+id/searchBTN"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#33B5E5"
         android:text="Request" />
 </LinearLayout>
