--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -39,6 +39,7 @@
         android:layout_marginTop="43dp"
         android:layout_marginEnd="183dp"
         android:text="Welcome"
+        android:textColor="#009688"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +49,7 @@
         android:id="@+id/logoutBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#33B5E5"
         android:onClick="logout_fun"
         android:text="Logout"
         app:layout_constraintBottom_toBottomOf="parent"
