--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -38,6 +38,7 @@
         android:layout_marginStart="141dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="182dp"
+        android:background="#5BCE87"
         android:text="RESET PASSWORD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.456"
