--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -132,6 +132,7 @@
         android:layout_marginTop="75dp"
         android:layout_marginEnd="204dp"
         android:layout_marginBottom="225dp"
+        android:background="#33B5E5"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +147,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="183dp"
         android:text="SIGN UP"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
