--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -119,9 +119,8 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Enter Password"
-        android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/passwordText"
-
+        android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@+id/emailET" />
 
     <Button
